# ChipCompAgent

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  config.example.json  pyproject.toml
examples/: baseline_sample.xlsx  mixed_input_xlsx_baseline.json  query_sample.xlsx  user_baseline.xlsx  user_input.txt
memory/: benchmark_memory.json
src/advantage_scout/: __init__.py  candidate_retriever.py  cli.py  env.py  input_adapters.py  llm.py  memory.py  normalizer.py  output_writer.py  schema.py  service.py  validator.py
